# universal

./: Cargo.toml  README.md  rustfmt.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/universal_d/: Cargo.toml
crates/universal_d/src/: lib.rs  standard.rs  tree.rs
crates/universal_d/tests/: full.rs
scripts/: generate_shared.sh  test.sh
src/: handle.rs  lib.rs  protocol.rs  uri.rs
tests/: uri.rs
