[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "^1"
map-macro = "0.3.0"
serde-binary = "0.5.0"
serde_json = "^1"
postcard = "^1"
read-only = "^0.1"
thiserror = "2.0.18"

[dependencies.prse]
version = "1.2.1"
features = ["alloc"]

[dependencies.serde]
version = "^1"
features = ["derive"]
